Fixed UI to respond correctly under BS dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  background-color: white;
+  /* background-color: white; */
 }
 
 
